# oma_pankki

./: .gitignore  README.md
admin-app/: CMakeLists.txt  addcustomermenu.cpp  addcustomermenu.h  addcustomermenu.ui  adminmenu.cpp  adminmenu.h  adminmenu.ui  cardinfo.cpp  cardinfo.h  customer.cpp  customer.h  customersmenu.cpp  customersmenu.h  customersmenu.ui  customersmenu1.cpp  customersmenu1.h  customersmenu1.ui  environment.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
backend/: app.js  database.js  package-lock.json  package.json
backend/models/: customer_model.js  transaction_model.js
backend/routes/: customer.js  transaction.js
